fix: immutableCollection error fix